[package]
name = "gut-cli"
version = "0.2.0"
edition = "2021"
description = "A tiny goose that roasts your git typo."
license = "MIT"
readme = "README.md"
repository = "https://github.com/Twil3akine/gut-cli"
homepage = "https://github.com/Twil3akine/gut-cli"
documentation = "https://docs.rs/gut-cli"

[lib]
name = "gut_cli"
path = "src/lib.rs"

[[bin]]
name = "gut"
path = "src/main.rs"
